// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser already provided flags: already provided flag 1`] = `
Object {
  "diagnostics": Array [
    "Invalid CLI argument '--test': Option already provided",
  ],
}
`;

exports[`parser array of numbers default value when default value is an array, but also incorrect: array of numbers wrong type 1`] = `
Object {
  "diagnostics": Array [
    "Invalid configuration option \`--test\`: Default value is type 'String', expected 'Number'",
    "Invalid configuration option \`--test\`: Default value is type 'String', expected 'Number'",
    "Invalid configuration option \`--test\`: Default value is type 'String', expected 'Number'",
  ],
}
`;

exports[`parser array of numbers default value: validate array of numbers 1`] = `
Object {
  "diagnostics": Array [
    "Invalid configuration option '--config': Option type 'b' is invalid, expected 'R'",
    "Invalid configuration option \`--test\`: Default value is type 'String', expected 'Array'",
  ],
}
`;

exports[`parser array of string default value when default value is an array, but also incorrect: array of strings wrong type 1`] = `
Object {
  "diagnostics": Array [
    "Invalid configuration option \`--test\`: Default value is type 'Number', expected 'String'",
    "Invalid configuration option \`--test\`: Default value is type 'Number', expected 'String'",
    "Invalid configuration option \`--test\`: Default value is type 'Number', expected 'String'",
  ],
}
`;

exports[`parser array of strings default value: validate array of strings 1`] = `
Object {
  "diagnostics": Array [
    "Invalid configuration option '--config': Option type 'b' is invalid, expected 'R'",
    "Invalid configuration option \`--test\`: Default value is type 'Number', expected 'Array'",
  ],
}
`;

exports[`parser bad config flag type: bad config flag type 1`] = `
Object {
  "diagnostics": Array [
    "Invalid configuration option '--config': Option type 'b' is invalid, expected 'R'",
  ],
}
`;

exports[`parser bad option flag type: bad option flag type 1`] = `
Object {
  "diagnostics": Array [
    "Invalid configuration option '--bad': Option type 'z' is invalid",
  ],
}
`;

exports[`parser config is required: config required 1`] = `
Object {
  "diagnostics": Array [
    "Invalid configuration option '--config': '--config' is always required in user defined definitions",
  ],
}
`;

exports[`parser duplicate aliases: duplicate alias 1`] = `
Object {
  "diagnostics": Array [
    "Invalid configuration option '--duplicate': Option '--config' already has alias '-c'",
  ],
}
`;

exports[`parser executable type flag: validate executable flag 1`] = `
Object {
  "diagnostics": Array [
    "Invalid configuration option '--config': Option type 'b' is invalid, expected 'R'",
    "Invalid configuration option \`--test\`: Default value is type 'Number', expected 'Function'",
  ],
}
`;

exports[`parser flag that requires another argument in the wrong position: not passing an argument to a flag that requires another argument 1`] = `
Object {
  "diagnostics": Array [
    "Invalid CLI argument '--test': Argument missing",
  ],
}
`;

exports[`parser invalid boolean value: invalid boolean default value 1`] = `
Object {
  "diagnostics": Array [
    "Invalid configuration option \`--test\`: Default value is type 'String', expected 'Boolean'",
  ],
}
`;

exports[`parser number type flag: validate number flag 1`] = `
Object {
  "diagnostics": Array [
    "Invalid configuration option '--config': Option type 'b' is invalid, expected 'R'",
    "Invalid configuration option \`--test\`: Default value is type 'String', expected 'Number'",
  ],
}
`;

exports[`parser number type flag: validate string flag 1`] = `
Object {
  "diagnostics": Array [
    "Invalid configuration option '--config': Option type 'b' is invalid, expected 'R'",
    "Invalid configuration option \`--test\`: Default value is type 'Number', expected 'String'",
  ],
}
`;

exports[`parser o and e flags can't be passed via argv: o and e flags 1`] = `
Object {
  "diagnostics": Array [
    "Invalid CLI argument '--e': option has type 'e' and cannot be passed via argv",
    "Invalid CLI argument '--o': option has type 'o' and cannot be passed via argv",
  ],
}
`;

exports[`parser options must match names: option names must match 1`] = `
Object {
  "diagnostics": Array [
    "Invalid configuration option '--test': Option key 'test' does not match name 'not-test'",
  ],
}
`;

exports[`parser parsing string array argument missing, next is a flag: array parameter with argument missing, next is a flag 1`] = `
Object {
  "diagnostics": Array [
    "Invalid CLI argument '--test': Argument missing",
  ],
}
`;

exports[`parser parsing string array argument missing: array parameter with argument missing 1`] = `
Object {
  "diagnostics": Array [
    "Invalid CLI argument '--test': Argument missing",
  ],
}
`;

exports[`parser parsing string array error: string array arguemnts invalid 1`] = `
Object {
  "diagnostics": Array [
    "Invalid CLI argument '--test': Argument missing",
  ],
}
`;

exports[`parser parsing string array success: string array success 1`] = `
Object {
  "diagnostics": Array [],
}
`;

exports[`parser parsing true and false strings: parsing true and false strings with boolean flags 1`] = `
Object {
  "diagnostics": Array [],
  "values": Map {
    Object {
      "name": "config",
      "type": "R",
    } => Object {
      "providedBy": 0,
      "value": null,
    },
    Object {
      "name": "test1",
      "type": "b",
    } => Object {
      "providedBy": 2,
      "value": "true",
    },
    Object {
      "name": "test2",
      "type": "b",
    } => Object {
      "providedBy": 2,
      "value": "false",
    },
  },
}
`;

exports[`parser rest args: rest args 1`] = `
Object {
  "rest": Array [
    "rest!",
    "one",
    "two",
    "three",
  ],
}
`;

exports[`parser simple arguments: simple argument 1`] = `
ConfigurationState {
  "args": Array [
    "arg1",
  ],
  "argv": null,
  "config": Object {
    "config": Object {
      "alias": "c",
      "defaultValue": Object {},
      "description": "Provide a configuration",
      "name": "config",
      "optional": true,
      "type": "R",
    },
  },
  "configTree": null,
  "diagnostics": Array [],
  "optionsByAlias": Map {
    "c" => Object {
      "alias": "c",
      "defaultValue": Object {},
      "description": "Provide a configuration",
      "name": "config",
      "optional": true,
      "type": "R",
    },
  },
  "optionsByName": Map {
    "config" => Object {
      "alias": "c",
      "defaultValue": Object {},
      "description": "Provide a configuration",
      "name": "config",
      "optional": true,
      "type": "R",
    },
  },
  "rest": Array [],
  "values": Map {
    Object {
      "alias": "c",
      "defaultValue": Object {},
      "description": "Provide a configuration",
      "name": "config",
      "optional": true,
      "type": "R",
    } => Object {
      "providedBy": 0,
      "value": Object {
        "basedir": "",
        "filename": "",
        "getModule": [Function],
      },
    },
  },
}
`;

exports[`parser string parameters fail: string arguments fail 1`] = `
Object {
  "diagnostics": Array [
    "Invalid CLI argument '--test': Argument missing",
  ],
}
`;

exports[`parser string parameters: string arguments 1`] = `
Object {
  "diagnostics": Array [],
  "values": Map {
    Object {
      "name": "config",
      "type": "R",
    } => Object {
      "providedBy": 0,
      "value": null,
    },
    Object {
      "name": "test",
      "type": "s",
    } => Object {
      "providedBy": 2,
      "value": "this should work",
    },
  },
}
`;

exports[`parser unknown flags passed via argv: unknown flag 1`] = `
Object {
  "diagnostics": Array [
    "Invalid CLI argument 'unknown': Option is not valid",
  ],
}
`;

exports[`parser when regex option default is not regex: regex default value error 1`] = `
Object {
  "diagnostics": Array [
    "Invalid configuration option \`--test\`: Default value is type 'Number', expected 'RegExp'",
  ],
}
`;
